# simsontonek

./: .flake8  Getting_h5py.md  README.md  pyproject.toml
simsontonek/: converter.py  legacy.py
tests/: test_chunks.py  test_converter.py
