[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simsontonek"
version = "0.0.1"
dependencies = [
    "numpy",
    "h5py",
    "pre-commit",
    "scipy",
    "matplotlib",
    "black",
    "flake8"
]

[project.scripts]
simsontonek_simson_stats = "simsontonek.bin.simson_stats:main"
simsontonek_nek_stats = "simsontonek.bin.nek_stats:main"
simsontonek_convert_to_hdf5 = "simsontonek.bin.convert_to_hdf5:main"
simsontonek_execute = "simsontonek.bin.execute:main"

[tool.black]
line-length = 79
inlcude = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
